# language-barrier

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  TODO.md
.github/workflows/: main.yml  pr.yml  rc.yml
examples/: anthropic_tool_example.rs  desired_interface.rs  typed_tool_example.rs
language-barrier-core/: Cargo.toml  DESIGN.md  README.md
language-barrier-core/examples/: anthropic_tool_example.rs  playing_gemini_refactor.rs  typed_tool_example.rs
language-barrier-core/src/: chat.rs  compactor.rs  error.rs  executor.rs  lib.rs  llm_service.rs  message.rs  model.rs  secret.rs  token.rs  tool.rs
language-barrier-core/src/provider/: anthropic.rs  gemini.rs  mistral.rs  mod.rs  ollama.rs  openai.rs
language-barrier-core/tests/: README.md  basic_chat_tests.rs  calculator_tool_test.rs  calculator_tool_tests.rs  multi_turn_conversation_tests.rs  multi_turn_tool_test.rs  provider_integration_tests.rs  test_tools.rs  test_utils.rs  weather_tool_tests.rs
language-barrier-runtime/: Cargo.toml  IDEA.md  README.md
language-barrier-runtime/examples/: chat.rs  weather_chat.rs
language-barrier-runtime/src/: lib.rs  main.rs  ops.rs
language-barrier-runtime/src/middleware/: break_on_tool.rs  chat.rs  generate_next_message.rs  mod.rs  tool_executor.rs
src/: chat.rs  client.rs  compactor.rs  error.rs  executor.rs  lib.rs  message.rs  model.rs  provider.rs  secret.rs  token.rs  tool.rs
src/provider/: anthropic.rs  gemini.rs  google.rs  mistral.rs  mod.rs  openai.rs
src/transport/: http.rs  mock.rs  mod.rs
tests/: basic_chat_tests.rs  calculator_tool_tests.rs  gemini_tool_test.rs  mistral_integration_tests.rs  mistral_tool_test.rs  multi_turn_conversation_tests.rs  multi_turn_tool_test.rs  openai_tool_test.rs  provider_integration_tests.rs  test_tools.rs  test_utils.rs  weather_tool_tests.rs
