[package]
name = "language-barrier"
version = "0.1.0"
edition = "2021"
description = "A Rust library providing abstractions for Large Language Models"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1.9"

[dev-dependencies]
tokio-test = "0.4"
