[workspace]
members = ["language-barrier-core"]
resolver = "3"

[workspace.package]
version = "0.1.4"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1.9"
schemars = "0.8.22"
url = "^2.5.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio-test = "0.4"
dotenv = "0.15"
hyper = "0.14"
tracing-test = "0.2"
parameterized = "^2.0.0"
